syntax = "proto3";

package helloworld;

option go_package="go-todolist/api/protobuf-spec/task";

// 定义一个Greeter服务
service TaskService {
  // 打招呼方法
  rpc ListTask (ListTaskRequest) returns (ListTaskReply) {}
}

// 定义请求的message
message ListTaskRequest {
  int32 userId = 1;
}

// 定义响应的message
message ListTaskReply {
  repeated TaskReply taskReply = 1;
}

message TaskReply {
  int32 taskId = 1;
  string taskName = 2;
}
